2006-08-09  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Add entry for new substitute-path commands.

2006-08-08  Joel Brobecker  <brobecker@adacore.com>

	* source.c: #include gdb_assert.h.
	(substitute_path_rule): New struct.
	(substitute_path_rules): New static global variable.
	(substitute_path_rule_matches): New function.
	(get_substitute_path_rule): New function.
	(rewrite_source_path): New function.
	(find_and_open_source): Add source path rewriting support.
	(strip_trailing_directory_separator): New function.
	(find_substitute_path_rule): New function.
	(add_substitute_path_rule): New function.
	(delete_substitute_path_rule): New function.
	(show_substitute_path_command): New function.
	(unset_substitute_path_command): New function.
	(set_substitute_path_command): New function.
	(_initialize_source): Add new substitute-path commands.
	* Makefile.in (source.o): Add dependency on gdb_assert.h.

2006-08-08  Joel Brobecker  <brobecker@adacore.com>

	* i386-tdep.c (i386_follow_jump): Use read_memory_nobpt to read
	instructions.
	(i386_analyze_struct_return): Likewise.
	(i386_skip_probe): Likewise.
	(i386_match_insn): Likewise.
	(i386_analyze_frame_setup): Likewise.
	(i386_analyze_register_saves): Likewise.
	(i386_skip_prologue): Likewise.

2006-08-08  Joel Brobecker  <brobecker@adacore.com>

	* gdbcore.h (read_memory_nobpt): New function name instead of
	deprecated_read_memory_nobpt.
	* breakpoint.c (read_memory_nobpt): New function name instead
	of deprecated_read_memory_nobpt.
	Adjust calls to old deprecated_read_memory_nobpt accordingly.
	* alpha-tdep.c: Adjust calls to deprecated_read_memory_nobpt
	accordingly.
	* alphanbsd-tdep.c: Likewise.
	* frame.c: Likewise.
	* frv-tdep.c: Likewise.
	* hppa-linux-tdep.c: Likewise.
	* hppa-tdep.c: Likewise.
	* i386-linux-nat.c: Likewise.
	* m68klinux-tdep.c: Likewise.
	* mips-tdep.c: Likewise.
	* s390-tdep.c: Likewise.

2006-08-08  Daniel Jacobowitz  <dan@codesourcery.com>

	* configure.ac: Check for expat.